[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognihub-pyeffectref"
version = "0.1.0"
description = "A simplified implementation of Vue 3's ref/effect reactive system in Python"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "hsz1273327", email = "hsz1273327@163.com"}
]
maintainers = [
    {name = "hsz1273327", email = "hsz1273327@163.com"}
]
keywords = ["reactive", "vue", "effect", "ref", "cognihub"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=2.0.0"
]
test = [
    "mypy>=2.0.0",
    "coverage>=7.9.0"
]

[project.urls]
Homepage = "https://github.com/hsz1273327/cognihub_pyeffectref"
Repository = "https://github.com/hsz1273327/cognihub_pyeffectref"
Issues = "https://github.com/hsz1273327/cognihub_pyeffectref/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cognihub_pyeffectref*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.coverage.run]
source = ["cognihub_pyeffectref"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
